# 7_26_V0

./: CMakeLists.txt  aarch64-build.py  vision_yolov8_trt10_zedmini_project_plan.md  wenti  版本信息
aarch64-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
aarch64-build/src/: Makefile  cmake_install.cmake
aarch64-build/src/controller/: Makefile  cmake_install.cmake  controller
aarch64-build/src/controller/drivers/: Makefile  cmake_install.cmake
aarch64-build/src/controller/drivers/dynamixel/: Makefile  cmake_install.cmake
aarch64-build/src/controller/drivers/gpio/: Makefile  cmake_install.cmake
aarch64-build/src/controller/options/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/core/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/engine/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/engine/action/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/engine/led/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/engine/scan/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/engine/walk/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/fsm/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/localization/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/sensor/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/server/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/skill/: Makefile  cmake_install.cmake
aarch64-build/src/controller/player/vision/: Makefile  cmake_install.cmake
aarch64-build/src/lib/: Makefile  cmake_install.cmake
aarch64-build/src/lib/imageproc/: Makefile  cmake_install.cmake
aarch64-build/src/lib/parser/: Makefile  cmake_install.cmake
aarch64-build/src/lib/robot/: Makefile  cmake_install.cmake
docs/: 2026-03-23_Qt有画面但无检测框_原因解析.md  2026-03-23_ZED-Mini单目接入代码改造日志.md  2026-03-23_ZED-Mini单目接入指南_工作日志.md  2026-03-23_ZED_Streaming与Qt调试方案完善日志.md  2026-03-23_auto_marker_trt10_upgrade_log.md  2026-03-23_auto_marker与Qt无框关联分析及代码补充.md  2026-03-23_auto_marker类别映射修正与使用说明.md  2026-03-23_x86_debuger_Qt黑屏原因分析与改进方案.md  2026-03-23_视觉检测逻辑与类别ID一致性检查.md  2026-03-23_阶段A最小修复_ZED跳过去畸变实施记录.md  2026-03-24_对比ZED官方YOLO示例_视觉推理识别分析日志.md  2026-03-24_视觉debug图与TensorRT输入一致性核查.md  2026-03-24_视觉推理letterbox对齐最小改造实施记录.md  2026-03-24_视觉系统与ZED官方实现对标及去畸变集成记录.md  TX2_视觉系统迁移至OrinNX_YOLOv8_TensorRT10实施方案.md  YOLOv8_ONNX_迁移方案.md  YOLOv8_TensorRT_迁移方案_完整版.md  ZED-Mini单目接入快速指南.md  logs.md  机器人视觉系统摄像头技术文档与ZED-Mini替换方案.md  视觉系统实现对比分析报告.md
src/controller/: CMakeLists.txt
src/controller/player/: play_without_gc.cpp  player.cpp  player.hpp
src/controller/player/engine/walk/: walk_engine.cpp
src/controller/player/fsm/: fsm.cpp  fsm_state_kick_ball.hpp
src/controller/player/sensor/: CMakeLists.txt  camera.cpp  camera.hpp  cmd_read.c  command_handlers.h  hipnuc_dec.c  hipnuc_dec.h  imu.cpp.bak  imu.hpp  serial_port.c  serial_port.h
src/controller/player/server/: server.cpp
src/controller/player/skill/: skill.cpp  skill.hpp
src/controller/player/vision/: CMakeLists.txt  trt_detector.cpp  trt_detector.hpp  trt_preprocess.cu  vision.cpp  vision.hpp
src/data/: .config.conf.swp  config.conf
src/data/action/: acts2.conf  walk1.conf  walk2.conf
src/data/device/: camera2.conf
src/data/sey2/: acts2_new.conf  walk2.conf
src/data/sey2/backup/: acts2.conf  walk1.conf  walk2.conf
src/data_V1/: config.conf  版本信息
src/data_V1/action/: acts2_new.conf  walk2.conf
src/lib/: CMakeLists.txt  cuda_utils.hpp
src/lib/imageproc/: imageproc.cu  imageproc.hpp
src/lib/imageproc/color/: color.cpp
src/lib/parser/: parser.cpp
src/lib/robot/: robot.cpp
src/tools/auto_marker/: CMakeLists.txt  main.cpp
src/tools/debuger/: CMakeLists.txt  debuger.cpp  debuger.hpp
src/tools/debuger/image_debuger/: image_debuger.cpp
src/tools/debuger/image_monitor/: image_monitor.cpp
src/tools/debuger/init_pos_editor/: CMakeLists.txt  init_pos_editor.cpp  init_pos_editor.hpp  init_pos_form.cpp  init_pos_form.hpp  init_pos_service.cpp  init_pos_service.hpp  init_pos_types.hpp
src/tools/debuger/tcp_client/: CMakeLists.txt  tcp_client.cpp
